objects/VPPSR_Retrieve_Search_Cert_Resp_Type__c.object
<CustomObject>
    <fields>
        <fullName>Veda_PPSR_SerialNumber_Search_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda PPSR SerialNumber Search Response</label>
        <referenceTo>VPPSR_Serial_Number_Search_Response__c</referenceTo>
        <relationshipName>RetrieveSearchCertificateResponseTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>access_Search_Cert_Expiry_Time__c</fullName>
        <label>access Search Cert Expiry Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>attachments__c</fullName>
        <label>attachments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_Req_Message_Id__c</fullName>
        <label>customer_Req_Message_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>request_Processed_Date_Time__c</fullName>
        <label>request Processed Date Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>search_Certi_Created_Date_Time__c</fullName>
        <label>search Certi Created Date Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>search_Certificate_File_Name__c</fullName>
        <label>search Certificate File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>search_Certificate_Number__c</fullName>
        <label>search Certificate Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Retrieve Search Cert Resp Type</label>
    <nameField>
        <displayFormat>VRR-{000000}</displayFormat>
        <label>Retrieve Search Cert Resp Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RetrieSearchCertificateResponseTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>